-----------
FRUIT 3.3.7
-----------

Samples added:
  sample_using_make
    This sample uses not rake but make.
    Works only for gfortran + make.

  sample_exit_at_fail
    Sample of exitting a test case when assertion fails.
    User has to add a line
      if (fruit_if_case_failed()) return
    in the tester code.
  

-----------
FRUIT 3.3.6
-----------

Previous version (3.3.5) could not compile
external subroutines having circular dependencies.
See  
  sample_circular_dep
.
Fruit 3.3.6 tries to build it
through considering some dependencies
not while compiling but while linking.



-----------
FRUIT 3.3.5
-----------

Samples of testing external subroutine and
external functions are is at 
  sample_exteranl_sub/
  sample_exteranl_func/

External functions tested must be 
specified in interface block or external statement of
tester code.
Otherwise FRUIT cannot estimate dependencies
for compile.


-----------
FRUIT 3.3.4
-----------

When tester routines are added to *_test.f90,
fruit_basket_gen.f90 is updated.
But when tester routine(s) were removed,
fruit_basket_gen.f90 was not updated.
This problem is fixed in FRUIT 3.3.4.


-----------
FRUIT 3.3.3
-----------

Time stamp of fruit_basket_gen.f90 and fruit_driver_gen.f90
are kept when their content does not change.
This behavior surpresses unnecessary re-compile and saves your time.


-----------
FRUIT 3.3.2
-----------

In assert_not_equals subroutines,
inequality comparison for real numbers
  if (real_number_1 /= real_number_2) then ...
was used. 
(gfortran 4.8.2 with -Wextra option warns about it.)
The inequality is replaced by inequalities
  if (real_1 < real_2 .or. real_1 > real_2) then...


-----------
FRUIT 3.3.1
-----------

Unnecessary mpi_machine_file were included in fruit_3.3.0.zip.
Removed them.


-----------
FRUIT 3.3.0
-----------

FRUIT 3.3.0 can test codes using MPI.
Sample is in directry sample_mpi.
Test code is in self_test_mpi.
  
Tested on
  Ubuntu 12.04 + OpenMPI